Complete parity/hardening epic: streams, persistence query, serialization, sharding, HTTP, ddata
Finishes the "Parity, Hardening & Ergonomics" epic tracked in docs/ROADMAP.md.
Every story (F0-F1, B1-B10, H1-H6, N1-N9) is now DONE; what remains is the
documented backlog. lein test: 466 tests / 981 assertions / 0 failures.

New modules
- pekko-clj.serialization + CljTransitSerializer: Transit serializer for Clojure
  data (ActorRefs embedded in messages round-trip), with serializers/bindings/
  identifiers config helpers and a create-system :transit-serialization hook.
- pekko-clj.persistence.query: event tagging, snapshot retention and read-side
  queries (eventsByTag / eventsByPersistenceId / persistenceIds).
- pekko-clj.cluster.ddata: ORSet / LWWMap / PNCounter over the replicator, with
  update/get/subscribe/delete returning Clojure result maps.
- pekko-clj.cluster.daemon + CljDaemonProcess: ShardedDaemonProcess for always-on
  workers (the one narrow typed shim; user code stays classic).
- pekko-clj.cluster.pubsub, pekko-clj.event-stream, pekko-clj.mailbox +
  CljPriorityMailbox, pekko-clj.circuit-breaker, pekko-clj.http.marshalling.

Extended
- streams: materialized values, KillSwitch, supervision/restart/retry, actor interop.
- sharding: passivation strategies (idle / LRU / SLRU / MRU / LFU), remember-entities
  store mode, hand-off stop message.
- HTTP: real body extraction (with-request-body was a stub), JSON/EDN marshalling,
  rejection/exception handlers, websockets.
- cluster: split-brain-resolver config, coordinated-shutdown helpers.
- core: context/stop/graceful-stop/actor-selection, ReceiveTimeout, reflection-free
  per-message path.

Notable fixes surfaced along the way
- CljActor no longer treats a returned vector as a become-pair, and no longer
  swallows Error/InterruptedException past supervision.
- ask returns a CompletableFuture and distinguishes failure from timeout.
- sharding entities receive the unwrapped payload and read their own entity-id;